# optional_dependencies

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
src/optional_dependencies/: __init__.py  _core.py  utils.py
src/optional_deps/: __init__.py  __init__.pyi  _core.py  imports.json
tests/: test_misc.py  test_package.py
